<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tl_expected</name>
  <version>1.3.0</version>
  <description>C++11/14/17 std::expected with functional-style extensions</description>
  <maintainer email="bence.magyar.robotics@gmail.com">bmagyar</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">christophfroehlich</maintainer>
  <maintainer email="nathanbrooks@picknik.ai">Nathan Brooks</maintainer>
  <maintainer email="shaurya.kumar@picknik.ai">Shaurya Kumar</maintainer>

  <author>Sy Brand</author>
  <author email="maybe@tylerjw.dev">Tyler Weaver</author>
  <license>CC0-1.0</license>
  <url>https://github.com/TartanLlama/expected</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <deprecated>
      This package will be removed in ROS 2 Lyrical Luth.
      Use tl/expected.hpp from libexpected-dev,
      or rcpputils/tl_expected/expected.hpp if the system header is not available
    </deprecated>
  </export>
</package>
